# genom-4

./: CMakeLists.txt  DNA.hpp  README.md  So you want to use Google Test .docx
InputFiles/: DNA.fasta  SeqFail3.fa
doc/: Doxyfile
inputFiles/: DBP_PPM.mat
outputFiles/: output.fasta
src/: DNA.cpp  DNA.hpp  DNAReader.cpp  DNAReader.hpp  EditAbstract.cpp  EditAbstract.hpp  EditDNA.cpp  EditDNA.hpp  EditPWM.cpp  EditPWM.hpp  Interface.cpp  Interface.hpp  MainWindow.cpp  MainWindow.hpp  PWM.cpp  PWM.cpp~  PWM.hpp  SeqData.cpp  SeqData.hpp  SuperDNAReader.cpp  SuperDNAReader.hpp  Window.cpp  Window.hpp  checkPWM  checkPWM.cc  header.h  main.cpp  makefile  returnSeg  returnSeg.cpp
src/old/: Interface.cpp  Interface.hpp  PWM.cpp  PWM.hpp  checkPWM.cc  convertion.PWM.cpp  main.cpp
tests/: bad_dna_DMDMismatch01.fasta  bad_dna_numbers01.fasta  bad_dna_numbers02.fasta  bad_dna_numbers03.fasta  bad_dna_wrongLetters01.fasta  bad_dna_wrongLetters02.fasta  bad_dna_wrongLetters03.fasta  bad_dna_wrongStructure01.fasta  bad_dna_wrongStructure02.fasta  bad_dna_wrongStructure03.fasta  bad_pwm_badFileStructure01.mat  bad_pwm_badFileStructure02.mat  bad_pwm_badFileStructure03.mat  bad_pwm_badNormalization01.mat  bad_pwm_badNormalization02.mat  bad_pwm_badNormalization03.mat  bad_pwm_badValues01.mat  bad_pwm_badValues02.mat  bad_pwm_badValues03.mat  bad_pwm_zeroSumPWM.mat  dna_02.fasta  pwm_ppm_badFileFormat_null_line.mat~  pwm_ppm_permissiveNormalization01.mat  pwm_ppm_permissiveNormalization01.mat~  pwm_pssm_permissiveNormalization01.mat  tests.cpp
